Fix some compilation warnings coming from unhandled execution paths for unexpected enum values https://bugs.webkit.org/show_bug.cgi?id=236228

Reviewed by Darin Adler.

No new tests. This should not change behavior.

* animation/CompositeOperationOrAuto.h:
(WebCore::toCompositeOperationOrAuto):
* bindings/js/JSCSSStyleValueCustom.cpp:
(WebCore::toJSNewlyCreated):
* bindings/js/JSCSSTransformComponentCustom.cpp:
(WebCore::toJSNewlyCreated):
* css/CSSComputedStyleDeclaration.cpp:
(WebCore::valueForAnimationComposition):
* css/CSSUnits.cpp:
(WebCore::unitCategory):
(WebCore::canonicalUnitTypeForCategory):
* platform/mediastream/libwebrtc/LibWebRTCProvider.cpp:
(WebCore::LibWebRTCProvider::receiverCapabilities):
(WebCore::LibWebRTCProvider::senderCapabilities):



Canonical link: https://commits.webkit.org/246904@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@289219 268f45cc-cd09-0410-ab3c-d52691b4dbfc